--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: cachix/install-nix-action@v15
       - uses: cachix/cachix-action@v10
         with:
-          name: wolverian-agda-template
+          name: agda-template
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - name: Build HTML
         run: nix build --verbose --print-build-logs
