--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,12 +1,12 @@
-name: GitHub Pages
+name: Build PR
 
 on:
-  push:
+  pull_request:
     branches: [main]
 
 jobs:
   build:
-    name: Deploy
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,11 +17,3 @@ jobs:
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - name: Build HTML
         run: nix build --verbose --print-build-logs
-      - name: Copy HTML so the next step can read it
-        run: cp -vHR result html
-      - name: GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.5.0
-        with:
-          build_dir: html
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
